layout-styles.css
body {
  background-color: #e6f0ff;
}

hr {
  text-align: center;
  margin: 0px;
}
.navbar {
  background-color: rgb(65, 65, 65);
  border-bottom: 1px solid black;
  box-shadow: 1px 1px 3px black;
  margin-bottom: 0px;
}

.navbar-brand {
  color: white;
  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
}

.nav-link {
  color: white;
  text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px darkred;
}

.nav-link:hover {
  color: rgb(190, 0, 0);
}

.about-me-container {
  display: flex;
  flex-direction: row;
  padding: 5rem;
  background-color: white;
  margin-bottom: 3rem;
}

.page-footer {
  text-align: center;
}

#profile-pic {
  border-radius: 5%;
  width: 12.5rem;
  height: 15rem;
  box-shadow: 5px 5px 5px;
}
h1 {
  color: white;
  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
}
.card {
  box-shadow: -3px 3px 4px gray;
}

#card-3 {
  display: block;
  margin-left: auto;
  margin-right: auto;
  height: 80%;
  width: 80%;
}

